<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_CASE_InitialiseData" Id="{d9da028c-744a-4aa1-afb7-f221ae644cc7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CASE_InitialiseData
VAR_INPUT
	bExecute 			: BOOL;		(* set TRUE to move Outers *)
	stCTDateTime			: ST_SYSTEM_DateTime;
	stDoorGuardReject		: ST_RejectItems;
END_VAR
VAR_IN_OUT
	stProductInstruction	: ST_PCM_Status;
	stCACData 				: ST_CAC_Data;	(* Case Queue *)
END_VAR
VAR_OUTPUT
	bDone 					: BOOL;
	bBusy					: BOOL;

	bDoorReject				: BOOL;
	sRejectCode				: T_MaxString;
	nMasterListCounter		: INT;
	
	bCheckDuplicates		: BOOL;
	
END_VAR
VAR
	rtExecute				: R_TRIG;
	nOuterIndex				: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* rising edge of bExecute *)
rtExecute(CLK:= bExecute);

		(* validate stCACData *)
IF rtExecute.Q THEN

	bDoorReject			:= FALSE;
	nMasterListCounter	:=0;
	sRejectCode 		:= '';
	bCheckDuplicates	:= FALSE;
	
	(* populate case data *)
	(* date (YYYY-MM-DD) and time (hh:mm:ss) with offset to UTC *)
	stCACData.ProductionDate 		:= F_StringWildcard('#YYYYMMDD#', stCTDateTime.sSystemTime);
	stCACData.ProductionTime 		:= F_StringWildcard('#hhmmss#', stCTDateTime.sSystemTime);
	stCACData.ProductionTimeOffset 	:= F_SYSTEM_SystemTimeOffsetToHHMM(stCTDateTime.nSystemTimeOffset);

	(* product and machine info *)
	stCACData.RetailSKU 				:= stProductInstruction.sRetailSKU;    (*sCPIData.RetailSKU;*)
	stCACData.CasePacker.ProductionSite := stProductInstruction.sProductionSite; (*sCPIData.ProductionSite  ;*)
	stCACData.CasePacker.ProductionLine :=stProductInstruction.sProductionLine;  (*   sCPIData.ProductionLine;*)
	stCACData.CodingAndTrackingMode 	:= stProductInstruction.nOpMode;  (*STRING_TO_INT(sCPIData.CodingAndTrackingMode);*)

	(* PassThrough, PrePrintedLabel or PrintApply mode active *)
	IF stCACData.CodingAndTrackingMode <= 6 THEN

		(* non-aggregated case, populate NumberOfOuters and CodingAndTrackingMode *)
		stCACData.NumberOfOuters := stProductInstruction.nOutersPerCase;

		//stCACData.CaseRejectCode := 'OK';
		//stCACData.CaseRejectID := 0;

	(* CaseTrace or PackTrace mode *)
	ELSE
		FOR nOuterIndex := 1 TO stProductInstruction.nOutersPerCase DO
			
			IF stCACData.Outer[nOuterIndex].OuterMasterListRestored THEN
				nMasterListCounter := nMasterListCounter +1;
			END_IF
			
			IF stCACData.Outer[nOuterIndex].OuterCodeStatus.5 AND stCACData.NumberOfOuters = stProductInstruction.nOutersPerCase  THEN
				stCACData.NumberOfOuters := -3;		//b5		Outer Code - Val Index error found
			END_IF
		END_FOR
		
		stCACData.CaseRejectCode := 'OK';
		stCACData.CaseRejectID := 0;
		
	END_IF
	
	IF stCACData.CaseRejectID =	stDoorGuardReject.nRejectID THEN
		bDoorReject	:= TRUE;
	END_IF

	sRejectCode 		:= stCACData.CaseRejectCode;
	bCheckDuplicates	:= TRUE;
	bDone 				:= TRUE;
		
(* bExecute has been reset *)
ELSIF bExecute = FALSE THEN

	bDone := FALSE;

END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>